Added support for MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.0.0)
 project(smb1 VERSION 0.1.0)
 
 include(CTest)
@@ -7,7 +7,7 @@ enable_testing()
 # https://cmake.org/cmake/help/book/mastering-cmake/chapter/Custom%20Commands.html
 add_custom_command(
     OUTPUT ${PROJECT_BINARY_DIR}/rom.c
-    COMMAND /usr/bin/python3
+    COMMAND python3
         ${PROJECT_SOURCE_DIR}/scripts/gen_rom_src.py
         ${PROJECT_SOURCE_DIR}/smb1.nes
         ${PROJECT_BINARY_DIR}/rom.c
@@ -15,6 +15,11 @@ add_custom_command(
 )
 
 add_subdirectory(notsofatso)
+
+if(WIN32)
+    add_subdirectory(glfw)
+    add_subdirectory(openal-soft)
+endif()
 
 set(GLAD_SRC
     src/glad/gl.c
@@ -30,8 +35,15 @@ add_executable(smb1
     src/smb1.c
 )
 
-target_include_directories(smb1 PRIVATE include notsofatso)
-target_link_libraries(smb1 PRIVATE m glfw openal notsofatso)
+if(WIN32)
+    # windows
+    target_include_directories(smb1 PRIVATE include glfw/include openal-soft/include notsofatso)
+    target_link_libraries(smb1 PRIVATE glfw OpenAL notsofatso)
+else()
+    # unix
+    target_include_directories(smb1 PRIVATE include notsofatso)
+    target_link_libraries(smb1 PRIVATE m glfw openal notsofatso)
+endif()
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
